# tipjar

./: Cargo.toml  README.md  tipjar.db
backend/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rust.dockerfile
backend/migrations/2024-03-19-185252_users/: up.sql
backend/migrations/2024-03-26-114822_user_transactions/: down.sql  up.sql
backend/src/: database.rs  invoice.rs  invoices.rs  lnd.rs  main.rs  models.rs  schema.rs  services.rs
backend/templates/: login.html.hbs  root.html.hbs  welcome.html.hbs
frontend/: README.md  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/services/: actions.tsx  api.tsx  authReducer.tsx  rootReducer.tsx  storeProvider.tsx
frontend/app/tip/: page.tsx
frontend/app/tip/[id]/: page.tsx
frontend/app/types/: index.tsx
frontend/app/waitlist/: page.tsx
frontend/components/: Footer.tsx  GradientWrapper.tsx  Hero.tsx  Navbar.tsx
migrations/2024-03-19-185252_users/: up.sql
src/: database.rs  lnd.rs  schema.rs
templates/: login.html.hbs  welcome.html.hbs
tipjar/: Cargo.toml
