[package]
name = "tipjarbackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"
qrcode-generator="4.1.9"
tonic_lnd = { package="fedimint-tonic-lnd", version="0.2", features=["lightningrpc", "routerrpc"]}
log = "0.4.21"
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15"
diesel = { version = "2.1.5", default-features = false, features = ["postgres", "chrono", "numeric"]}
sha2 = "0.10.8"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
rocket_contrib = "0.4.11"

