[package]
name = "tipjarbackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lightning = { version = "0.0.121" }
thiserror = "1.0.45"
tonic_lnd = { package="fedimint-tonic-lnd", version="0.1.2", features=["lightningrpc", "routerrpc"]}
log = "0.4.21"
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15"
diesel = { version = "2.1.5", default-features = false, features = ["postgres","numeric"] }
sha2 = "0.10.8"

serde = "1.0.130"
serde_json = "1.0.44"
serde_derive = "1.0.104"
md5 = "0.7.0"
hex="0.4.3"
rand = "0.8.5"
[dependencies.rocket]
version = "0.5.0"
features = ["json"]
[dependencies.bigdecimal]
version = "0.1.0"
features = ["serde"]
